@@ -151,6 +151,7 @@ class FindPythonFilesTest(CoverageTest):
         self.make_file("sub/x.c")                   # nope: not .py
         self.make_file("sub/ssub/__init__.py")
         self.make_file("sub/ssub/s.py")
+        self.make_file("sub/ssub/~s.py")            # nope: editor effluvia
         self.make_file("sub/lab/exp.py")            # nope: no __init__.py
         py_files = set(find_python_files("sub"))
         self.assert_same_files(py_files, [
