@@ -9,6 +9,9 @@ Version 3.5.2b1
   properly handled during reporting on Python 2.  Python 3 always handled them
   properly.  This fixes `issue  157`_.
 
+- Backup files left behind by editors are no longer collected by the source=
+  option, fixing `issue 168`_.
+
 - When running a module with ``coverage run -m <modulename>``, certain details
   of the execution environment weren't the same as for
   ``python -m <modulename>``.  This had the unfortunate side-effect of making
@@ -24,6 +27,7 @@ Version 3.5.2b1
 .. _issue 155: https://bitbucket.org/ned/coveragepy/issue/155/cant-use-coverage-run-m-unittest-discover
 .. _issue 157: https://bitbucket.org/ned/coveragepy/issue/157/chokes-on-source-files-with-non-utf-8
 .. _issue 166: https://bitbucket.org/ned/coveragepy/issue/166/dont-try-to-compile-c-extension-on-pypy
+.. _issue 168: https://bitbucket.org/ned/coveragepy/issue/168/dont-be-alarmed-by-emacs-droppings
 
 
 Version 3.5.1 --- 23 September 2011
